--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,16 @@
                     </execution>
                 </executions>
             </plugin>
+                <repository>
+    <id>com.springsource.repository.bundles.release</id>
+    <name>SpringSource Enterprise Bundle Repository - SpringSource Bundle Releases</name>
+    <url>http://repository.springsource.com/maven/bundles/release</url>
+</repository>
+<repository>
+    <id>com.springsource.repository.bundles.external</id>
+    <name>SpringSource Enterprise Bundle Repository - External Bundle Releases</name>
+    <url>http://repository.springsource.com/maven/bundles/external</url>
+</repository> 
 
             <!-- to handle any Java version mismatch, add the following configuration for maven-compiler-plugin -->
             <plugin>
